# nucleus

./: .gitignore  INSTALLATION.md  PROJECT_CONTEXT.md  alembic.ini  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: main.yml
app/core/: constants.py
app/models/: __init__.py
app/models/advance_tax_models/: capital_gains.py  comments.py  dividends.py  documents_upload.py  financial_year.py  interest_details.py  other_income.py  quarter.py  rental.py  tax_profile.py
app/models/common_models/: advisor.py  client.py  login.py
app/models/tsm_models/: notification.py  task.py
migrations/: env.py
migrations/versions/: 02533cebd7c9_.py  03217bacbe96_creted_assets_disclosure_documents_table.py  039e364a7060_initial_migration.py  06b8a01d8633_.py  09329e8f3cd9_.py  0a22fc23bee7_.py  0f5018ffe905_new_table.py  11029de5a3ce_.py  15e94821431a_create_file_table.py  1ba1b8b58441_.py  20260128_addresstype_rename_enum.py  20260128_fix_residency_end_date_rule.py  20260420_1500_v0_20_0_cg_ingestion_columns.py  20260509_1200_dividend_quarterly_breakdown.py  20260509_1500_dividend_quarter_per_row.py  20260514_1000_rename_bond_ltcg20_to_ltcg125.py  20260515_1200_itr_salary_component_taxable.py  20260516_1000_restore_itr_salary_schedule_flat_cols.py  20260516_1200_login_events.py  20260516_1500_backfill_employer_computed_regime.py  20260519_1000_allowance_exempt_regime.py  20260605_add_itr_documents_advisor_comment.py  20260618_1248_replace_ais_26as_storage.py  20260707_itr_tis_pdf_archives.py  2a8783e55e07_add_citizenship_start_and_end_date_to_.py  2b1676b4d3c9_.py  418b66d2ddf0_add_unique_index_on_client_id_and_.py  48e0cd8358f8_added_pause_reason_in_task_table.py  4af53c07ff47_updated_file_table.py  4b3993796c67_new_table_for_files.py  4e55d281118c_.py  4ff9274dd86f_.py  58241ac15c5d_.py  6a03bb584b2b_.py  6a3129afc7aa_merge_all_heads_into_one.py  6afae6ab55fc_.py  6e726ae3fcb4_.py  6ff257e9be8a_new_table.py  7030dda7c212_add_models.py  76950d916f5a_remove_unique_constraint_on_client_id_.py  (+36 more)
nucleus/: __init__.py
nucleus/core/: constants.py
nucleus/db/: amfi_schema_migration.py  database.py
nucleus/models/: __init__.py
nucleus/models/26_as_log_models/: file_metadata.py
nucleus/models/advance_tax_models/: __init__.py  brokerage_accounts.py  capital_gains.py  carry_forward_losses.py  cii.py  comments.py  deductions.py  dividends.py  documents_upload.py  employer.py  excemption.py  (+11 more)
(+89 files in other folders)
