[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleus"
version = "0.1.0"
description = "Nucleus package with models and database components"
requires-python = ">=3.8"
dependencies = [
    "SQLAlchemy==2.0.44",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
]

[project.optional-dependencies]
migrations = [
    "alembic==1.17.0",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
]
web = [
    "fastapi==0.120.0",
    "uvicorn==0.38.0",
    "starlette==0.48.0",
    "pydantic==2.12.3",
    "pydantic_core==2.41.4",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "sniffio==1.3.1",
    "h11==0.16.0",
    "idna==3.11",
    "typing-inspection==0.4.2",
]
database = [
    "psycopg2-binary==2.9.11",
    "greenlet==3.2.4",
]
dev = [
    "click==8.3.0",
    "colorama==0.4.6",
    "dotenv==0.9.9",
    "typing_extensions==4.15.0",
]
full = [
    "alembic==1.17.0",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "fastapi==0.120.0",
    "uvicorn==0.38.0",
    "starlette==0.48.0",
    "pydantic==2.12.3",
    "pydantic_core==2.41.4",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "sniffio==1.3.1",
    "h11==0.16.0",
    "idna==3.11",
    "typing-inspection==0.4.2",
    "psycopg2-binary==2.9.11",
    "greenlet==3.2.4",
]

[tool.setuptools]
packages = ["nucleus"]

